--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "nodemon": "^3.0.3",
     "react-router-dom": "^6.22.1"
   },
